# RCVW

./: .gitignore  README.md
src/rcvw/: CMakeLists.txt
src/rcvw/AIOUSB/AIOUSB/: CMakeLists.txt
src/rcvw/AIOUSB/AIOUSB/deprecated/classlib/: CMakeLists.txt
src/rcvw/AIOUSB/AIOUSB/lib/: CMakeLists.txt
src/rcvw/CVInspectorPlugin/: CMakeLists.txt  manifest.json  treerepair.xml
src/rcvw/CVInspectorPlugin/src/: CVInspectorPlugin.cpp
src/rcvw/DifferentialGPSPlugin/: CMakeLists.txt  manifest.json
src/rcvw/DifferentialGPSPlugin/include/: DifferentialGPSPlugin.hpp  DifferentialGPS_Configuration.hpp
src/rcvw/DifferentialGPSPlugin/src/: DifferentialGPSPlugin.cpp
src/rcvw/HRIStatusPlugin/: CMakeLists.txt  manifest.json
src/rcvw/HRIStatusPlugin/include/: HRIStatusConfiguration.hpp
src/rcvw/HRIStatusPlugin/lib/neousys/6.2.0-37-generic.x86_64/: test_cos  test_dio  test_wdt  wdt_dio.ko
src/rcvw/HRIStatusPlugin/lib/neousys/6.5.0-28-generic.x86_64/: wdt_dio.ko
src/rcvw/HRIStatusPlugin/src/: HRIStatusPlugin.cpp
src/rcvw/RCVWPlugin/: CMakeLists.txt  manifest.json
src/rcvw/RCVWPlugin/src/: RCVWParameters.hpp  RCVWPlugin.cpp
src/rcvw/rcvw-demo/: Dockerfile  getCrossingInfo.php  getCrossingInfo2.php  getHRIs.php  getNextMessage.php  index.html  sbSetup.php  setHRIValue.php  unlockMessage.php
src/tmx/: CMakeLists.txt  tmx.doxyfile
src/tmx-exampleapps/: CMakeLists.txt
src/tmx-exampleapps/EmptyPlugin/: .cproject  .project  CMakeLists.txt
src/tmx-exampleapps/EmptyPlugin/src/: EmptyPlugin.cpp
src/tmx-exampleapps/ExamplePlugin/: .cproject  .project  CMakeLists.txt  manifest.json
src/tmx-exampleapps/ExamplePlugin/src/: ExamplePlugin.cpp  SampleData.cpp  SampleData.h
src/tmx/tmx-broker/: .cproject  .project  CMakeLists.txt
src/tmx/tmx-broker/apache/: CMakeLists.txt
src/tmx/tmx-broker/api/: CMakeLists.txt
src/tmx/tmx-broker/api/include/tmx/broker/: TmxAsyncOperation.hpp  TmxBrokerClient.hpp  TmxBrokerContext.hpp  TmxBrokerFactory.hpp
src/tmx/tmx-broker/api/src/tmx/broker/: TmxBrokerClient.cpp  TmxBrokerContext.cpp  TmxBrokerLifecycle.cpp
src/tmx/tmx-broker/api/test/: test_main.cpp
src/tmx/tmx-broker/api/test/tmx/broker/: TmxBrokerUrl_Test.cpp  TmxFileSystemBroker_test
src/tmx/tmx-broker/async/: CMakeLists.txt
src/tmx/tmx-broker/gpsd/: CMakeLists.txt
src/tmx/tmx-broker/qpidproton/: CMakeLists.txt
src/tmx/tmx-broker/snmp/: CMakeLists.txt
src/tmx/tmx-message/: .cproject  .project  CMakeLists.txt
src/tmx/tmx-message/api/: .cproject  CMakeLists.old
src/tmx/tmx-message/api/include/tmx/common/: TmxData.hpp  TmxException.hpp  TmxLogger.hpp  TmxStructuredData.hpp  TmxVariant.hpp
src/tmx/tmx-message/api/include/tmx/message/: TmxMessage.hpp  TmxMessageCodec.hpp
src/tmx/tmx-message/api/src/tmx/common/: TmxData.cpp  TmxDataAccessors.cpp  TmxDataComplexAssignments.cpp  TmxDataComplexConverters.cpp  TmxDataPrimitiveAssignments.cpp  TmxDataPrimitiveConverters.cpp  TmxFileLogWriter.cpp  TmxLogger.cpp
src/tmx/tmx-message/api/src/tmx/message/: TmxMessage.cpp  TmxMessageCodec.cpp
src/tmx/tmx-message/api/test/: test_main.cpp
src/tmx/tmx-message/api/test/tmx/codec/: TmxCodec_test.cpp
src/tmx/tmx-message/api/test/tmx/common/: TmxTypeDescriptor_test.cpp  TmxTypeVisitor_test.cpp  test-TmxData.cpp  test_bytes_type.cpp  test_exception.cpp  test_function.cpp  test_magic_enum.cpp  test_measurements.cpp  test_type_traits.cpp
src/tmx/tmx-message/asntype/: CMakeLists.txt
src/tmx/tmx-message/codec/: CMakeLists.txt
src/tmx/tmx-message/codec/include/tmx/message/: TmxData.hpp  TmxMessage.hpp
src/tmx/tmx-message/j2735-202007/: .cproject  .project  CMakeLists.txt
src/tmx/tmx-message/platform/: CMakeLists.txt
src/tmx/tmx-message/platform/include/tmx/: platform.hpp
src/tmx/tmx-message/platform/test/: test_main.cpp
src/tmx/tmx-message/types/: CMakeLists.txt
src/tmx/tmx-message/types/test/: test_main.cpp
src/tmx/tmx-plugin/: .cproject  CMakeLists.txt
src/tmx/tmx-plugin/api/: CMakeLists.txt
src/tmx/tmx-plugin/client/: CMakeLists.txt
src/tmx/tmx-plugin/dao/: CMakeLists.txt
src/tmx/tmx-plugin/utils/: CMakeLists.txt
src/tmx/tmx-plugin/utils/other/: AES.cpp  AES.h  License.cpp  License.h  Logger.cpp  Logger.h  SystemContextThread.cpp  TmxLog.h  TmxModule.cpp  TmxModule.h  version.h
src/tmx/tmxctl/: CMakeLists.txt
src/v2x-hub/: CMakeLists.txt
src/v2x-hub/CommandPlugin/: CMakeLists.txt  description.txt
src/v2x-hub/CommandPlugin/src/: CommandControl.cpp
src/v2x-hub/CswPlugin/: CMakeLists.txt  GF_CSW_Path.txt  IVP_GF_CSW.xml  IVP_TF_CSW_WB.xml  V2I_BCO_CSW.xml  description.txt  gps-tf-spoof.txt
src/v2x-hub/CswPlugin/src/: CswPlugin.cpp
src/v2x-hub/DmsPlugin/: CMakeLists.txt  description.txt
src/v2x-hub/GNSSPlugin/: .cproject  .project  CMakeLists.txt  description.txt  manifest.json
src/v2x-hub/LearInterfacePlugin/: CMakeLists.txt
src/v2x-hub/LearInterfacePlugin/src/: LearInterfacePlugin.cpp
src/v2x-hub/MapPlugin/: CMakeLists.txt  ETRP_West_5th_GID.xml  GID_Telegraph-Twelve_Mile_withEgress.xml  MobDev_5th_Perry_GID.xml  TSPW_5th_Perry_GID.xml  V2I_5th_Tisdale.xml  V2I_5th_Tisdale_Overlap.xml  description.txt  manifest.json
src/v2x-hub/MapPlugin/src/: MapPlugin.cpp
src/v2x-hub/MessageReceiverPlugin/: .cproject  .project  CMakeLists.txt  description.txt  manifest.json
src/v2x-hub/MessageReceiverPlugin/include/: MessageReceiverPlugin.hpp  MessageReceiver_Configuration.hpp
src/v2x-hub/MessageReceiverPlugin/src/: MessageReceiverPlugin.cpp
src/v2x-hub/MmitssIVPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
src/v2x-hub/MmitssIVPlugin/src/: MmitssIVPlugin.cpp
src/v2x-hub/MmitssRSPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
src/v2x-hub/MmitssRSPlugin/src/: MmitssRSPlugin.cpp
src/v2x-hub/ODEPlugin/: CMakeLists.txt  description.txt
src/v2x-hub/RSUImmediateForwardPlugin/: CMakeLists.txt  description.txt  manifest.json
src/v2x-hub/RtcmPlugin/: .cproject  CMakeLists.txt  description.txt  manifest.json
src/v2x-hub/SpatPlugin/: CMakeLists.txt  Config_Settings.txt  description.txt
(+1421 files in other folders)
