PROJECT ( CVInspectorPlugin VERSION 4.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "CVI")

ADD_TMX_PLUGIN ( )

# Determine the component this plugin is located in
GET_FILENAME_COMPONENT (SRC_PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
GET_FILENAME_COMPONENT (TARGET_COMPONENT ${SRC_PARENT_DIR} NAME)
STRING (TOUPPER ${TARGET_COMPONENT} TARGET_COMPONENT)

INSTALL (FILES ${CMAKE_CURRENT_SOURCE_DIR}/treerepair.xml
         DESTINATION share/tmx/${TARGET_COMPONENT}
         COMPONENT ${COMPONENT_NAME})
