PROJECT ( DifferentialGPSPlugin VERSION 4.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "DifferentialGPS")

ADD_TMX_PLUGIN ()

TARGET_COMPILE_DEFINITIONS ( ${PROJECT_NAME} PRIVATE IGNORE_RTCM2 )
TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES (${PROJECT_NAME})

