PROJECT ( HRIStatusPlugin VERSION 4.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "HRIStatus")

FIND_PACKAGE (PkgConfig REQUIRED)
#PKG_CHECK_MODULES (LIBUSB REQUIRED libusb-1.0)
#FIND_PATH (MEX_INCLUDE_DIR NAMES mex.h PATH_SUFFIXES octave-3.8.1/octave
#													 octave-4.0.0/octave
#												     octave-4.2.2/octave
#													 octave-6.4.0/octave)
# Determine the WDT_DIO include directory
SET (WDT_DIO_LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/neousys)

FILE (GLOB WDT_DIO_KERNELS "${WDT_DIO_LIBRARY_PATH}/*")

FIND_LIBRARY (WDT_DIO_LIBRARY NAMES wdt_dio
		PATHS ${WDT_DIO_KERNELS}
		PATH_SUFFIXES ${WDT_DIO_KERNEL_PATHS}
		NO_CACHE REQUIRED)

ADD_TMX_PLUGIN ( )

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
												    $<TARGET_PROPERTY:aiousb,INCLUDE_DIRECTORIES> include/neousys)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PUBLIC libtmx-j2735 aiousb)

IF (WDT_DIO_LIBRARY)
	MESSAGE(STATUS "Linking ${PROJECT_NAME} to HW library ${WDT_DIO_LIBRARY}")
	TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE ${WDT_DIO_LIBRARY})

	STRING (TOLOWER "${PROJECT_NAME}" COMPONENT_NAME)
	INSTALL(FILES ${WDT_DIO_LIBRARY} DESTINATION lib COMPONENT ${COMPONENT_NAME})
ELSE ()
	TARGET_COMPILE_DEFINITIONS (${PROJECT_NAME} PUBLIC TMX_NO_NEOUSYS_POC_HARDWARE)
ENDIF ()