CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT ( tmx-plugin C CXX )

SET (CMAKE_EXPORT_PACKAGE_REGISTRY ON)

ADD_LIBRARY (${PROJECT_NAME} INTERFACE)

FOREACH (MOD_DIR "utils" "dao" "client")
	MESSAGE (STATUS "Adding sub-component ${MOD_DIR}")
	ADD_SUBDIRECTORY (${MOD_DIR})
ENDFOREACH ()

ADD_LIBRARY (lib${PROJECT_NAME} $<TARGET_OBJECTS:tmxplugin-utils>
								$<TARGET_OBJECTS:tmxplugin-dao>
								$<TARGET_OBJECTS:tmxplugin-client>)
TARGET_INCLUDE_DIRECTORIES (lib${PROJECT_NAME} PUBLIC $<TARGET_PROPERTY:tmxplugin-utils,INTERFACE_INCLUDE_DIRECTORIES>
												      $<TARGET_PROPERTY:tmxplugin-dao,INTERFACE_INCLUDE_DIRECTORIES>
											          $<TARGET_PROPERTY:tmxplugin-client,INTERFACE_INCLUDE_DIRECTORIES>)
TARGET_LINK_LIBRARIES (lib${PROJECT_NAME} PRIVATE ${PROJECT_NAME})
TARGET_LINK_LIBRARIES (lib${PROJECT_NAME} PUBLIC libtmx-message libtmx-broker Boost::program_options)
SET_TARGET_PROPERTIES (lib${PROJECT_NAME} PROPERTIES PREFIX "")

INSTALL (TARGETS lib${PROJECT_NAME}
		 DESTINATION lib
		 COMPONENT ${PROJECT_NAME})

EXPORT (PACKAGE ${PROJECT_NAME})
