PROJECT ( RSUImmediateForwardPlugin VERSION 4.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "RSUImmediateForward")

ADD_TMX_PLUGIN ()
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)

STRING (TOLOWER "${PROJECT_NAME}" COMPONENT_NAME)

INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/mibs
         DESTINATION share
         COMPONENT ${COMPONENT_NAME})
