PROJECT ( RtcmPlugin VERSION 4.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "RTCM")

ADD_TMX_PLUGIN ()
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_COMPILE_DEFINITIONS ( ${PROJECT_NAME} PRIVATE IGNORE_RTCM2 )
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} PUBLIC libtmx-j2735 )
