CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT ( broker-apache C CXX )

SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(RdKafka REQUIRED rdkafka++)

IF (RdKafka_FOUND)
    MESSAGE (STATUS "Including support for Apache Kafka broker")

    FILE (GLOB_RECURSE SOURCES "src/*.cpp")

    ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
    TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
    TARGET_LINK_LIBRARIES (${TMXLIB} PUBLIC tmxbroker-api ${RdKafka_LIBRARIES})
    TARGET_LINK_LIBRARIES (tmx-broker INTERFACE ${TMXLIB})
ENDIF ()