CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT ( broker-async C CXX )

SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

FIND_PATH(Boost_ASIO NAMES boost/asio.hpp HINTS ${Boost_INCLUDE_DIRS})

IF (Boost_ASIO)
    MESSAGE (STATUS "Including support for Boost Asynchronous I/O broker")

    FILE (GLOB_RECURSE SOURCES "src/*.c*")

    ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
    TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
    TARGET_LINK_LIBRARIES (${TMXLIB} PUBLIC tmxbroker-api)
    TARGET_LINK_LIBRARIES (tmx-broker INTERFACE ${TMXLIB})
ENDIF ()
