CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT ( broker-snmp C CXX )

SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

# - Find Net-SNMP
#
# -*- cmake -*-
#
# Find the Net-SNMP module
#
#  NETSNMP_INCLUDE_DIR - where to find Net-SNMP.h, etc.
#  NETSNMP_LIBRARIES   - List of libraries when using Net-SNMP.
#  NETSNMP_FOUND       - True if Net-SNMP found.

IF (NETSNMP_INCLUDE_DIR)
    # Already in cache, be silent
    SET(NETSNMP_FIND_QUIETLY TRUE)
ENDIF (NETSNMP_INCLUDE_DIR)

FIND_PATH (NETSNMP_INCLUDE_DIR snmp.h
        /usr/include/net-snmp/library
)

SET (NETSNMP_NAMES netsnmp)
FIND_LIBRARY (NETSNMP_LIBRARY
        NAMES ${NETSNMP_NAMES}
        PATHS /usr/lib /usr/local/lib
)

SET (NETSNMPAGENT_NAMES netsnmpagent)
FIND_LIBRARY (NETSNMPAGENT_LIBRARY
        NAMES ${NETSNMPAGENT_NAMES}
        PATHS /usr/lib /usr/local/lib
)

SET (NETSNMPHELPERS_NAMES netsnmphelpers)
FIND_LIBRARY (NETSNMPHELPERS_LIBRARY
        NAMES ${NETSNMPHELPERS_NAMES}
        PATHS /usr/lib /usr/local/lib
)

SET (NETSNMPMIBS_NAMES netsnmpmibs)
FIND_LIBRARY (NETSNMPMIBS_LIBRARY
        NAMES ${NETSNMPMIBS_NAMES}
        PATHS /usr/lib /usr/local/lib
)

SET (NETSNMPTRAPD_NAMES netsnmptrapd)
FIND_LIBRARY (NETSNMPTRAPD_LIBRARY
        NAMES ${NETSNMPTRAPD_NAMES}
        PATHS /usr/lib /usr/local/lib
)

SET (NETSNMP_LIBRARIES
        ${NETSNMP_LIBRARY}
        ${NETSNMPAGENT_LIBRARY}
        ${NETSNMPHELPERS_LIBRARY}
        ${NETSNMPMIBS_LIBRARY}
        #  ${NETSNMPTRAPD_LIBRARY}
)

INCLUDE (FindPackageHandleStandardArgs)
FIND_PACKAGE_HANDLE_STANDARD_ARGS (NETSNMP
        DEFAULT_MSG
        NETSNMP_INCLUDE_DIR
        NETSNMP_LIBRARIES
)

MARK_AS_ADVANCED(
        NETSNMP_LIBRARY
        NETSNMPAGENT_LIBRARY
        NETSNMPHELPERS_LIBRARY
        NETSNMPMIBS_LIBRARY
        NETSNMPTRAPD_LIBRARY
        NETSNMP_INCLUDE_DIR
)

IF (NETSNMP_FOUND)
    MESSAGE (STATUS "Including support for NetSNMP broker")

    FILE (GLOB_RECURSE SOURCES "src/*.c*")

    ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
    TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
    TARGET_LINK_LIBRARIES (${TMXLIB} PUBLIC tmxbroker-api ${NETSNMP_LIBRARIES})
    TARGET_LINK_LIBRARIES (tmx-broker INTERFACE ${TMXLIB} ${NETSNMP_LIBRARIES})
#
#    FILE (GLOB_RECURSE TEST_SOURCES "test/*.c*")
#    ADD_EXECUTABLE (${TMXTEST} ${TEST_SOURCES})
#    TARGET_INCLUDE_DIRECTORIES (${TMXTEST} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
#    TARGET_COMPILE_FEATURES(${TMXLIB} PUBLIC cxx_std_17)
#    TARGET_LINK_LIBRARIES (${TMXTEST} ${TMXLIB} tmxbroker-api Boost::unit_test_framework dl pthread)
#
#    ADD_TEST (NAME ${TMXTEST} COMMAND ${TMXTEST})
ENDIF ()