CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT (message-codec C CXX)
SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

FILE (GLOB_RECURSE SOURCES "src/*.c*")
ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PRIVATE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/tmx/message/codec/thirdparty>)

TARGET_LINK_LIBRARIES (${TMXLIB} tmxmessage-platform tmxmessage-types)

INSTALL (DIRECTORY include
         DESTINATION .
         COMPONENT tmx-message
         FILES_MATCHING PATTERN "*.h*"
         PATTERN ".*" EXCLUDE
         PATTERN "*/thirdparty" EXCLUDE)
