CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(tmxasn-j2735-202007 C CXX)

SET(ASN_INCLUDE_DIR "tmx/message/j2735/202007")

IF (NOT TMX_ASN_DEBUG)
    SET (TMX_ASN_DEBUG FALSE)
ENDIF ()

FILE (GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c*")
ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})

# Use the older C standard because ASN_DEBUG is broken in C99
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 90)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include/${ASN_INCLUDE_DIR}
        ${CMAKE_CURRENT_BINARY_DIR}/src
        ${CMAKE_CURRENT_BINARY_DIR}/src/${ASN_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE tmxmessage-types)

INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/src
        DESTINATION include
        COMPONENT tmx-message
        FILES_MATCHING PATTERN "*.h*")
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION lib
        COMPONENT tmx-message)
