CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT (message-platform C CXX)
SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

# This is a header-only library
ADD_LIBRARY (${TMXLIB} INTERFACE)
TARGET_INCLUDE_DIRECTORIES (${TMXLIB} SYSTEM INTERFACE 
			$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
			${Boost_INCLUDE_DIRS})
TARGET_COMPILE_FEATURES (${TMXLIB} INTERFACE cxx_std_17)

INSTALL (DIRECTORY include
		 DESTINATION .
		 COMPONENT tmx-message
		 FILES_MATCHING PATTERN "*.h*"
		 PATTERN ".*" EXCLUDE)

FILE (GLOB_RECURSE TEST_SOURCES "test/*.c*")
ADD_EXECUTABLE (${TMXTEST} ${TEST_SOURCES})
TARGET_LINK_LIBRARIES (${TMXTEST} ${TMXLIB} Boost::unit_test_framework dl pthread)

ADD_TEST (NAME ${TMXTEST} COMMAND ${TMXTEST})
