CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT (message-types C CXX)
SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

FILE (GLOB_RECURSE SOURCES "src/*.c*")
ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
TARGET_COMPILE_FEATURES(${TMXLIB} PUBLIC cxx_std_17)
TARGET_INCLUDE_DIRECTORIES (${TMXLIB} SYSTEM PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_LINK_LIBRARIES (${TMXLIB} tmxmessage-platform dl backtrace)

INSTALL (DIRECTORY include
         DESTINATION .
         COMPONENT tmx-message
         FILES_MATCHING PATTERN "*.h*"
         PATTERN ".*" EXCLUDE)

FILE (GLOB_RECURSE TEST_SOURCES "test/*.c*")
ADD_EXECUTABLE (${TMXTEST} ${TEST_SOURCES})
TARGET_COMPILE_FEATURES(${TMXTEST} PUBLIC cxx_std_17)
TARGET_LINK_LIBRARIES (${TMXTEST} ${TMXLIB} Boost::unit_test_framework pthread)

ADD_TEST (NAME ${TMXTEST} COMMAND ${TMXTEST})
