CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT ( plugin-api C CXX )

FILE (GLOB_RECURSE SOURCES "src/*.c*")

STRING (REPLACE tmx-plugin tmx-message TMX_MESSAGE_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES (AFTER ${TMX_MESSAGE_INCLUDE_DIR})

STRING (REPLACE tmx-plugin tmx-broker TMX_BROKER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES (AFTER ${TMX_BROKER_INCLUDE_DIR})

STRING (REPLACE tmx-plugin tmx-message TMX_MESSAGE_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
LINK_DIRECTORIES(AFTER ${TMX_MESSAGE_BINARY_DIR})

STRING (REPLACE tmx-plugin tmx-broker TMX_BROKER_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
LINK_DIRECTORIES(AFTER ${TMX_BROKER_BINARY_DIR})

ADD_LIBRARY (tmxplugin SHARED ${SOURCES})
#ADD_DEPENDENCIES (tmxplugin tmxapi)
TARGET_LINK_LIBRARIES (tmxplugin PUBLIC tmxbroker tmxapi)
TARGET_INCLUDE_DIRECTORIES (tmxplugin PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_COMPILE_FEATURES (tmxplugin PRIVATE cxx_std_17)
