CMAKE_MINIMUM_REQUIRED (VERSION 3.18)

PROJECT (plugin-utils C CXX)
SET (TMXLIB tmx${PROJECT_NAME})
SET (TMXTEST test-${TMXLIB})

FIND_LIBRARY (UUID_LIBRARY uuid)

FILE (GLOB_RECURSE SOURCES "src/*.c*")
ADD_LIBRARY (${TMXLIB} OBJECT ${SOURCES})
TARGET_INCLUDE_DIRECTORIES (${TMXLIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_LINK_LIBRARIES (${TMXLIB} libtmx-message ${UUID_LIBRARY})

TARGET_LINK_LIBRARIES (tmx-plugin INTERFACE ${TMXLIB})

INSTALL (DIRECTORY include
        DESTINATION .
        COMPONENT tmx-plugin
        FILES_MATCHING PATTERN "*.h*"
        PATTERN ".*" EXCLUDE)

#FILE (GLOB_RECURSE TEST_SOURCES "test/*.c*")
#ADD_EXECUTABLE (${TMXTEST} ${TEST_SOURCES})
#TARGET_LINK_LIBRARIES (${TMXTEST} ${TMXLIB} Boost::unit_test_framework dl pthread)

#ADD_TEST (NAME ${TMXTEST} COMMAND ${TMXTEST})
